<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MotoristaFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_name"
            android:hint="@string/name_hint"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/input_layout_email"
        app:layout_constraintEnd_toEndOf="@id/input_layout_name"
        app:layout_constraintStart_toStartOf="@id/input_layout_name"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/input_layout_phone"
        app:layout_constraintEnd_toEndOf="@id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_email"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_phone"
            android:hint="@string/phone_hint"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/input_layout_adress"
        app:layout_constraintEnd_toEndOf="@id/input_layout_phone"
        app:layout_constraintStart_toStartOf="@id/input_layout_phone"
        app:layout_constraintTop_toBottomOf="@id/input_layout_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_adress"
            android:hint="@string/adress_hint"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/input_layout_describe"
        app:layout_constraintEnd_toEndOf="@id/input_layout_adress"
        app:layout_constraintStart_toStartOf="@id/input_layout_adress"
        app:layout_constraintTop_toBottomOf="@id/input_layout_adress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_describe"
            android:hint="@string/describe_hint"
            android:inputType="textLongMessage"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_subscriber"
        android:layout_marginTop="16dp"
        android:text="@string/subscriber_button"
        app:layout_constraintEnd_toEndOf="@id/input_layout_describe"
        app:layout_constraintStart_toStartOf="@id/input_layout_describe"
        app:layout_constraintTop_toBottomOf="@id/input_layout_describe"/>
    
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delte_button"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/input_layout_describe"
        app:layout_constraintStart_toStartOf="@id/input_layout_describe"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>